@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22410: Module level functions in the re module now cache compiled
+  locale-dependent regular expressions taking into account the locale.
+
 - Issue #8876: distutils now falls back to copying files when hard linking
   doesn't work.  This allows use with special filesystems such as VirtualBox
   shared folders.
